# bored

./: .gitignore
cpp/: CMakeLists.txt  app.cpp  bored.cpp  copycat.cpp  hello_triangle.cpp  test_window.cpp
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
python/goodmorning/: send_message.scpt  start_send_message.py
